# codas-adk

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  deploy.sh  pyproject.toml  requirements-lock.txt
.claude/logs/: session-20260714-914bfd67.md
.github/workflows/: ci.yml
codas/: __init__.py
codas/agents/: __init__.py  agent.py  callbacks.py  grounding.py  numeric_audit.py  tools.py
codas/core/: data.py  discovery.py  gemini.py  quality_gates.py  settings.py  statistics.py  validation.py
codas/service/: app.py  auth.py
codas_agents/: agent.py  callbacks.py  numeric_audit.py  prompts.py  runtime.py  tools.py
codas_core/: __init__.py  data.py  discovery.py  gemini.py  models.py  reporting.py  settings.py  validation.py
codas_service/: __init__.py  app.py
examples/: quickstart.py  run_agent.py  sample_dataset.csv
scripts/: agent_robustness.py  benchmark_datasets.py  ci_smoke_cohorts.json  loadtest.py  paper_cohorts.example.json  reproduce_paper_biomarkers.py  robustness_audit.py  scientific_validation.py
tests/: test_agent_harness.py  test_agent_loop.py  test_domain_agnostic.py  test_edge_cases.py  test_engine_smoke.py  test_generalization.py  test_numeric_audit.py  test_paper_fidelity.py  test_proposed_features.py  test_quality_gates.py  test_real_datasets.py  test_review_hardening.py  test_robustness.py  test_scientific_validity.py  test_service.py  test_validation_golden.py
